# CardNewsAI

./: .env.example  .gitignore  .vercelignore  README.md  USER_GUIDE.md  config.yaml  main.py  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  run_factory.bat  run_factory.ps1
app/: globals.css  layout.tsx  page.tsx
app/api/generate/: route.ts
app/api/refine/: route.ts
config/: brand.json
inputs/: source.txt  topics.csv
lib/: cardnews.ts
prompts/: brief_prompt.md  caption_prompt.md  cardnews_task.md  humanize_prompt.md  review_prompt.md  slides_prompt.md  system.md
scripts/: ralph-loop.mjs  smoke-test.mjs  visual_check.py
src/cardnews_factory/: __init__.py  cli.py  config.py  env.py  html.py  models.py  pipeline.py  qa.py  renderer.py  strategy.py  writer.py
src/cardnews_factory/agents/: __init__.py  copy_agent.py
tests/: test_strategy.py
